<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="about_category">About</string>
    <string name="system_category">System</string>
    <string name="statusbar_category">Status Bar</string>
    <string name="battery_title">Battery</string>
    <string name="buttons_title">Navigation bar and hardware keys</string>
    <string name="statusbar_clock_title">Clock &amp; Date</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="statusbar_misc_title">Statusbar Misc</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="traffic_category">Traffic indicators</string>
    <string name="recents_title">Recents Screen</string>
    <string name="carrierlabel_title">Carrier Label</string>
    <string name="lockscreen_ui_title">Lockscreen</string>
    <string name="venom_dialog_title">Help us help you!</string>
    <string name="venom_dialog_message">If you find a bug with any of these settings, post in the Bug Reports section of our Google+ page. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="venom_dialog_toast">READ THE WHOLE THING!</string>
    <string name="power_category">Power menu options</string>
    <string name="powermenu_category">Power Menu</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_reboot">Reboot</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="advanced_reboot_title">Advanced reboot</string>
    <string name="advanced_reboot_summary">Include options in the power menu for rebooting into recovery and bootloader</string>
    <string name="advanced_reboot_dialog_title">Advanced reboot menu</string>
    <string name="advanced_reboot_disabled">Disable</string>
    <string name="advanced_reboot_hide_on_keyguard">Hide on lock screen</string>
    <string name="advanced_reboot_show_always">Show always</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="default_string">Default</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_summary_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_summary_right">Right</string>
    <string name="status_bar_quick_qs_pulldown_off">Off</string>
    <string name="status_bar_quick_qs_pulldown_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_right">Right</string>
    <string name="status_bar_clock_position_title">Clock style</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_center">Center</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>
    <string name="status_bar_clock_category">Clock</string>
    <string name="status_bar_date_title">Date</string>
    <string name="status_bar_date_none">Hidden (default)</string>
    <string name="status_bar_date_small">Small</string>
    <string name="status_bar_date_normal">Normal</string>
    <string name="status_bar_date_format_title">Date format</string>
    <string name="status_bar_date_style">Date style</string>
    <string name="status_bar_date_style_normal">Normal</string>
    <string name="status_bar_date_style_lowercase">Lowercase</string>
    <string name="status_bar_date_style_uppercase">Uppercase</string>
    <string name="status_bar_date_format_custom">Custom java format</string>
    <string name="status_bar_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="status_bar_date_string_edittext_summary">Enter string</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Discard</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_bigcircle">Big Circle</string>
    <string name="status_bar_battery_style_solid">Solid</string>
    <string name="status_bar_battery_style_gauge">Gauge</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_icons_summary">Control which status bar icons are shown</string>
    <string name="status_bar_double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="status_bar_double_tap_to_sleep_summary">Double-tap on the status bar to turn off the display</string>
    <string name="hardware_keys_power_key_title">Power button</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Recents button</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_action_nothing">No action</string>
    <string name="hardware_keys_action_menu">Open/close menu</string>
    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
    <string name="hardware_keys_action_search">Search assistant</string>
    <string name="hardware_keys_action_voice_search">Voice search</string>
    <string name="hardware_keys_action_in_app_search">In-app search</string>
    <string name="hardware_keys_action_launch_camera">Launch camera</string>
    <string name="hardware_keys_action_sleep">Turn screen off</string>
    <string name="hardware_keys_action_last_app">Last app</string>
    <string name="hardware_keys_action_split_screen">Split screen</string>
    <string name="hardware_keys_action_single_handed_left">Single hand mode (left)</string>
    <string name="hardware_keys_action_single_handed_right">Single hand mode (right)</string>
    <string name="hardware_keys_action_screenshot_full">Take a full screenshot</string>
    <string name="hardware_keys_action_screenshot_region">Take a region screenshot</string>
    <string name="camera_sleep_on_release_title">Screen peek</string>
    <string name="camera_sleep_on_release_summary">A half press will keep the screen on only while the button is held down</string>
    <string name="camera_launch_title">Launch camera</string>
    <string name="camera_launch_summary">A longpress and release will launch camera</string>
    <string name="volbtn_music_controls_title">Playback control</string>
    <string name="volbtn_music_controls_summary">When the screen is off, long pressing the volume keys will seek music tracks</string>
    <string name="volbtn_cursor_control_title">Keyboard cursor control</string>
    <string name="volbtn_cursor_control_off">Disabled</string>
    <string name="volbtn_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volbtn_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="power_end_call_title">End call</string>
    <string name="power_end_call_summary">Pressing the power button will end the current call</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="button_wake_title">Wake up device</string>
    <string name="button_wake_summary">Wake the device by pressing button</string>
    <string name="volume_answer_call_title">Answer call</string>
    <string name="volume_answer_call_summary">Answer incoming calls by pressing the volume buttons</string>
    <string name="home_answer_call_title">Answer call</string>
    <string name="home_answer_call_summary">Pressing the home button will answer the current incoming call</string>
    <string name="kill_app_longpress_back">Kill app back button</string>
    <string name="misc_category">Miscellaneous</string>
    <string name="sound_category">Sound</string>
    <string name="wired_ringtone_focus_mode_title">Where to play ringtones from</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="dashboard_category">Dashboard options</string>
    <string name="dashboard_suggestions_title">Suggestions</string>
    <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string>
    <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string>
    <string name="remove_tile_summaries_title">Summaries</string>
    <string name="remove_tile_summaries_summary_enabled">Dashboard summaries are enabled</string>
    <string name="remove_tile_summaries_summary_disabled">Dashboard summaries are disabled</string>
    <string name="dashboard_conditions_title">Conditions</string>
    <string name="summary_dashboard_conditions_enabled">Dashboard conditions are enabled</string>
    <string name="summary_dashboard_conditions_disabled">Dashboard conditions are disabled</string>
    <string name="dashboard_columns_portrait_title">Columns (portrait)</string>
    <string name="dashboard_columns_landscape_title">Columns (landscape)</string>
    <string name="gestures_category">Gestures</string>
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe three fingers to take screenshot</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display icon of activity that generates toast message</string>
</resources>