<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/misc_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="sound_category"
        android:title="@string/sound_category" >

        <ListPreference
            android:key="wired_ringtone_focus_mode"
            android:title="@string/wired_ringtone_focus_mode_title"
            android:entries="@array/wired_ringtone_focus_mode_entries"
            android:entryValues="@array/wired_ringtone_focus_mode_values" />

        <!-- Volume Steps -->
        <PreferenceScreen
            android:key="volume_steps"
            android:title="@string/volume_steps_title"
            android:fragment="com.viper.venom.fragments.VolumeSteps" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="dashboard_category"
            android:title="@string/dashboard_category">

        <com.viper.venom.preference.CustomSeekBarPreference
                android:key="dashboard_portrait_columns"
                android:title="@string/dashboard_columns_portrait_title"
                settings:max="3"
                settings:min="1"
                settings:units=""
                android:persistent="false" />

        <com.viper.venom.preference.CustomSeekBarPreference
                android:key="dashboard_landscape_columns"
                android:title="@string/dashboard_columns_landscape_title"
                settings:max="5"
                settings:min="1"
                settings:units=""
                android:persistent="false" />

        <com.viper.venom.preference.SystemSettingSwitchPreference
                android:key="disable_settings_suggestions"
                android:title="@string/dashboard_suggestions_title"
                android:summaryOn="@string/summary_dashboard_suggestions_enabled"
                android:summaryOff="@string/summary_dashboard_suggestions_disabled"
                android:defaultValue="true" />

        <com.viper.venom.preference.SystemSettingSwitchPreference
                android:key="disable_dashboard_conditions"
                android:title="@string/dashboard_conditions_title"
                android:summaryOn="@string/summary_dashboard_conditions_enabled"
                android:summaryOff="@string/summary_dashboard_conditions_disabled"
                android:defaultValue="true" />

        <com.viper.venom.preference.SystemSettingSwitchPreference
                android:key="remove_settings_tile_summary"
                android:title="@string/remove_tile_summaries_title"
                android:summaryOn="@string/remove_tile_summaries_summary_enabled"
                android:summaryOff="@string/remove_tile_summaries_summary_disabled"
                android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="gestures_category"
            android:title="@string/gestures_category">

        <com.viper.venom.preference.SystemSettingSwitchPreference
             android:key="three_finger_gesture"
             android:title="@string/three_finger_gesture"
             android:summary="@string/three_finger_gesture_summary"
             android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="misc_category"
        android:title="@string/misc_category" >

        <com.viper.venom.preference.SystemSettingSwitchPreference
            android:key="toast_icon"
            android:title="@string/toast_icon_title"
            android:summary="@string/toast_icon_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>